Fix horizontal overflow

--- a/src/sass/_queries.scss
+++ b/src/sass/_queries.scss
@@ -1,7 +1,7 @@
 @media (min-width: 550px) {
   .cards {
+    gap: 2rem;
     grid-template-columns: repeat(2, 1fr);
-    grid-gap: 2rem;
   }
   .card {
     margin: 0;
